<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nivelaciones</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="nivelaciones_topograficas">Nivelaciones topográficas</string>
	<string name="presentacion1">Aplicación para nivelaciones geométricas, trabajos de nivelación topográfica en carreteras, y replanteos de niveles.</string>
	<string name="presentacion3">Los registros almacenados en el itinerario de nivelación pueden grabarse en un archivo de texto. Esta opción se encuentra en el botón "menú" del dispositivo.</string>
	<string name="presentacion2">Esta aplicación ha sido desarrollada por Víctor Palma Carrasco, Ingeniero técnico en Topografía, y Android Developer especializado en aplicaciones para Topografía, Geodesia e Ingeniería Civil.</string>
	
	<string name="presentacion">Presentación</string>
	<string name="menu_principal">Menú principal</string>
	<string name="trazado">Trazado</string>
	<string name="sub_trazado">Replanteos en carreteras y viales</string>
	<string name="replanteos">Replanteos</string>
	<string name="sub_replanteos">Herramienta para replanteo de niveles</string>
	<string name="nivelacion_simple">Nivelación simple</string>
	<string name="sub_nivelacion_simple">Registro de mediciones al hilo central</string>
	<string name="nivelacion_precision">Nivelación</string>
	<string name="sub_nivelacion_precision">Registro de mediciones a los tres hilos</string>
	
	<string name="arrastre_cota">Arrastre de cota</string>
	<string name="replanteo_niveles">Replanteo de niveles</string>
	<string name="regresar_punto_inicial">Regresar al punto inicial</string>
	
	<string name="lectura_espalda">Lectura a espalda</string>
	<string name="lectura_frente">Lectura al frente</string>
	<string name="espalda">Espalda</string>
	<string name="frente">Frente</string>
	<string name="guardar">Guardar</string>
	<string name="cota_inicial">Cota inicial</string>
	<string name="establecer_cota_inicial">Establecer cota inicial</string>
	<string name="cota_inicial_vacio">Cota inicial (botón menú del dispositivo)</string>
	<string name="lista_observaciones">Lista de observaciones</string>
	<string name="cota_acumulada_ultimo_tramo">Cota acumulada hasta último tramo</string>
	<string name="tramos_medidos">Tramos medidos</string>
	<string name="tramo">Tramo</string>
	<string name="plano_comparacion">Plano de comparación</string>
	<string name="borrar_observacion">Presiona la última observación para borrarla</string>
	<string name="definicion_planta">Definición de planta</string>
	
	<string name="cancelar">Cancelar</string>
	<string name="atras">Atrás</string>
	<string name="selecciona_archivo">Selecciona un archivo</string>
	<string name="inicio">Inicio</string>
	<string name="carpeta">Carpeta</string>
	<string name="archivo_texto">Archivo de texto</string>
	<string name="archivo_desconocido">Archivo desconocido</string>
	
	<string name="ruta_actual">Ruta actual</string>
	<string name="accion_no_permitida">Acción no permitida</string>
	<string name="fichero_de_texto">Fichero de texto</string>
	<string name="base_datos">Base de datos</string>
	<string name="puntos_encontrados">Puntos encontrados</string>
	<string name="valor_incorrecto_linea">Valor incorrecto en la línea</string>
	<string name="formato_incorrecto_linea">Estructura de datos incorrecta en la línea</string>
	
	<string name="sub_cota_inicial">Introduzca el valor de la cota inicial</string>
	<string name="desde_archivo">Desde archivo</string>
	<string name="abrir_archivo">Abrir archivo</string>
	<string name="aceptar">Aceptar</string>
	
	<string name="introducir_valor">Introducir valor</string>
	<string name="proyecto">Proyecto</string>
	<string name="punto">Punto</string>
	<string name="x">X</string>
	<string name="y">Y</string>
	<string name="z">Z</string>
	
	<string name="introduce_datos">Introduce los datos del punto que quieres encontrar</string>
	<string name="lista_puntos_encontrados">Lista de puntos encontrados</string>
	<string name="atencion">Atención</string>
	<string name="no_base_datos">No se encuentra la base de datos</string>
	<string name="comprar">Comprar</string>
	
	<string name="pk_punto_replantear">Punto kilométrico del punto a replantear</string>
	<string name="fichero_trazado_vacio">Fichero de trazado (botón menú para seleccionarlo)</string>
    <string name="fichero_trazado">Fichero de trazado</string>
	<string name="introduzca_valor_pk">Introduzca valor del punto kilométrico</string>
	<string name="calcular_cota">Calcular cota</string>
	<string name="rasante_terminada">Rasante terminada</string>
	<string name="cota_teorica_punto_replantear">Cota teórica del punto a replantear</string>
	<string name="espesor_capa">Espesor capa</string>
	<string name="distancia_eje">Distancia al eje</string>
	<string name="peralte_izquierdo">Peralte izquierdo</string>
	<string name="peralte_derecho">Peralte derecho</string>
	<string name="limpar_todo">Limpiar todo</string>
	<string name="calcular_cota_teorica">Calcular cota teórica</string>
	<string name="replanteo_de_cota">Replanteo de cota</string>
	<string name="lectura_al_punto">Lectura al punto</string>
	<string name="cota_del_punto">Cota del punto</string>
	<string name="cota_teorica_del_punto">Cota teórica del punto</string>
	<string name="calcular_replanteo">Calcular replanteo</string>
	<string name="bajar_cota">Bajar cota</string>
	<string name="subir_cota">Subir cota</string>
	<string name="medida_vacia">0.000m</string>
    <string name="columna">columna</string>

    <string name="informacion_fichero">Información del fichero</string>
    <string name="numero_registros">Número de registros</string>
    <string name="punto_kilometrico_inicial">Punto kilométrico inicial</string>
    <string name="punto_kilometrico_final">Punto kilométrico final</string>
    <string name="cero">0</string>

    <string name="leyendo_datos">Leyendo datos. Un momento, por favor.</string>
    <string name="error_linea">Error en línea</string>
    <string name="detalles_fichero_planta">Detalles del fichero seleccionado</string>
    <string name="registros_leidos">Registros leídos</string>
	
</resources>
