<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row_adapter_obs_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_nivelacion_espalda"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tramos_medidos"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_horizontal"
        android:background="#FFA9BCF5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nivelacion_simple"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/espalda"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>
