<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCEE3F6"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cota_inicial_vacio"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/shape_solid_item"
        android:textColor="#FFFFFFFF"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:paddingLeft="10dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/shape_solid_item"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:text="@string/lectura_espalda"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFFFF" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="#FFFFFFFF"
                style="@style/EditTextStyle"/>
            <requestFocus />
        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shape_button"
            android:text="@string/guardar"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:layout_weight="1"
        android:background="@drawable/shape_solid_item"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lista_observaciones"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFFFF" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:gravity="center_horizontal"
            android:text="@string/borrar_observacion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFFFF" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:divider="@android:color/transparent" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/shape_solid_item"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cota_acumulada_ultimo_tramo"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFFFF"
            android:paddingLeft="5dip" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/plano_comparacion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFFFF"
            android:paddingLeft="5dip" />
    </LinearLayout>

</LinearLayout>