<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFCEE3F6" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/shape_solid_item"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:gravity="center_horizontal"
                android:text="@string/pk_punto_replantear"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFFFF"
                android:textSize="16dip"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/fichero_trazado_vacio"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFFFF"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/introduzca_valor_pk"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFFFF" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        style="@style/EditTextStyle"
                        android:layout_marginLeft="5dip"
                        android:layout_marginTop="5dip"
                        android:layout_marginRight="5dip">

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <Button
                    android:id="@+id/button1"
                    style="@style/ButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_button"
                    android:text="@string/calcular_cota" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rasante_terminada"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/medida_vacia"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/shape_solid_item" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cota_teorica_punto_replantear"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFFFF"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/espesor_capa"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"
                    android:layout_gravity="bottom"/>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="numberDecimal"
                    style="@style/EditTextStyle"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distancia_eje"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"
                    android:layout_gravity="bottom"/>

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:gravity="right"
                    android:textColor="#FFFFFFFF"
                    style="@style/EditTextStyle"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"/>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dip">

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/peralte_izquierdo"
                    android:textColor="#FFFFFFFF" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peralte_derecho"
                    android:textColor="#FFFFFFFF" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/limpar_todo"
                    android:background="@drawable/shape_button"
                    style="@style/ButtonText" />

                <Button
                    android:id="@+id/button3"
                    style="@style/ButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button"
                    android:text="@string/calcular_cota_teorica" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:background="@drawable/shape_solid_item" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/replanteo_de_cota"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFFFF"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dip"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plano_comparacion"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medida_vacia"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lectura_al_punto"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"
                    android:layout_gravity="bottom"/>

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    style="@style/EditTextStyle"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:gravity="right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cota_teorica_del_punto"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medida_vacia"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip" >

                <Button
                    android:id="@+id/button4"
                    style="@style/ButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_button"
                    android:text="@string/calcular_replanteo" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|bottom"
                    android:text="@string/medida_vacia"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>